syntax = "proto3";
package schema;

option go_package = "goclient/pb";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}
